--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="wifth=device-width, initial-scale=1.0">
     <title>Meu Perfil</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!--link para linkar config de style entre as paginas-->
 </head>
 
@@ -80,6 +80,7 @@
 </p>
 </footer>
 
+<script src="./js/script.js"></script>
 </body>
 
 </html>
